feat(X-Pack): [数据填报]新建表单支持绑定已有表 #12788

--- a/core/core-backend/src/main/resources/i18n/core_zh_CN.properties
+++ b/core/core-backend/src/main/resources/i18n/core_zh_CN.properties
@@ -128,6 +128,7 @@ i18n_df_lt_check=\u503C\u9700\u8981\u5C0F\u4E8E %s: %s
 i18n_df_gt_check=\u503C\u9700\u8981\u5927\u4E8E %s: %s
 i18n_df_le_check=\u503C\u9700\u8981\u5C0F\u4E8E\u7B49\u4E8E %s: %s
 i18n_df_ge_check=\u503C\u9700\u8981\u5927\u4E8E\u7B49\u4E8E %s: %s
+i18n_df_column_exists=\u5B57\u6BB5: %s \u5DF2\u5B58\u5728
 
 i18n_wrong_email=\u90AE\u7BB1\u683C\u5F0F\u9519\u8BEF
 i18n_wrong_tel=\u624B\u673A\u53F7\u7801\u683C\u5F0F\u9519\u8BEF
@@ -200,4 +201,4 @@ i18n_geo_sub_exists=\u5DF2\u5B58\u5728\u540C\u540D\u5B50\u533A\u57DF\uFF01
 i18n_user_new_pwd_error=\u5BC6\u7801\u683C\u5F0F\uFF1A8-20\u4F4D\u4E14\u81F3\u5C11\u4E00\u4F4D\u5927\u5199\u5B57\u6BCD\u3001\u5C0F\u5199\u5B57\u6BCD\u3001\u6570\u5B57\u3001\u7279\u6B8A\u5B57\u7B26
 i18n_user_pwd_same_error=\u65B0\u65E7\u5BC6\u7801\u4E0D\u80FD\u76F8\u540C
 
-i18n_copilot_ds=\u5f53\u524d\u4ec5\u652f\u6301MySQL\u6570\u636e\u6e90
+i18n_copilot_ds=\u5F53\u524D\u4EC5\u652F\u6301MySQL\u6570\u636E\u6E90
