--- a/core/core-backend/src/main/resources/i18n/core_en_US.properties
+++ b/core/core-backend/src/main/resources/i18n/core_en_US.properties
@@ -129,6 +129,7 @@ i18n_df_lt_check=Value needs to be less than %s: %s
 i18n_df_gt_check=Value needs to be greater than %s: %s
 i18n_df_le_check=Value needs to be less than or equal to %s: %s
 i18n_df_ge_check=Value needs to be greater than or equal to %s: %s
+i18n_df_column_exists=The column: %s exists
 
 i18n_wrong_email=Email format is incorrect
 i18n_wrong_tel=Phone number format is incorrect
