--- a/core/core-backend/src/main/resources/i18n/core_zh_TW.properties
+++ b/core/core-backend/src/main/resources/i18n/core_zh_TW.properties
@@ -128,6 +128,7 @@ i18n_df_lt_check=\u503C\u9700\u8981\u5C0F\u65BC %s: %s
 i18n_df_gt_check=\u503C\u9700\u8981\u5927\u65BC %s: %s
 i18n_df_le_check=\u503C\u9700\u8981\u5C0F\u65BC\u7B49\u65BC %s: %s
 i18n_df_ge_check=\u503C\u9700\u8981\u5927\u65BC\u7B49\u65BC %s: %s
+i18n_df_column_exists=\u5B57\u6BB5: %s \u5DF2\u5B58\u5728
 
 i18n_wrong_email=\u90F5\u7BB1\u683C\u5F0F\u932F\u8AA4
 i18n_wrong_tel=\u624B\u6A5F\u865F\u78BC\u683C\u5F0F\u932F\u8AA4
@@ -200,4 +201,4 @@ i18n_geo_sub_exists=\u5DF2\u5B58\u5728\u540C\u540D\u5B50\u5340\u57DF\uFF01
 i18n_user_new_pwd_error=\u5BC6\u78BC\u683C\u5F0F\uFF1A8-20\u4F4D\u4E14\u81F3\u5C11\u4E00\u4F4D\u5927\u5BEB\u5B57\u6BCD\u3001\u5C0F\u5BEB\u5B57\u6BCD\u3001\u6578\u5B57\u3001\u7279\u6B8A\u5B57\u7B26
 i18n_user_pwd_same_error=\u65B0\u820A\u5BC6\u78BC\u4E0D\u80FD\u76F8\u540C
 
-i18n_copilot_ds=\u7576\u524d\u50c5\u652f\u6301MySQL\u6578\u64da\u6e90
+i18n_copilot_ds=\u7576\u524D\u50C5\u652F\u6301MySQL\u6578\u64DA\u6E90
