fix：远程excel后台信息国际化

--- a/core/core-backend/src/main/resources/i18n/core_en_US.properties
+++ b/core/core-backend/src/main/resources/i18n/core_en_US.properties
@@ -203,3 +203,9 @@ i18n_user_new_pwd_error=Password format: 8-20 characters and must include at lea
 i18n_user_pwd_same_error=Old and new passwords cannot be the same
 
 i18n_copilot_ds=Only supports MySQL datasource
+
+i18n_file_download_failed=File download failed!
+i18n_unsupported_file_format=Unsupported file format!
+i18n_invalid_address=Invalid address!
+i18n_unsupported_protocol=Unsupported protocol!
+i18n_excel_error_first_row=Empty cells are not allowed in the middle of the first row!
