--- a/core/core-backend/src/main/resources/i18n/core_zh_TW.properties
+++ b/core/core-backend/src/main/resources/i18n/core_zh_TW.properties
@@ -202,3 +202,9 @@ i18n_user_new_pwd_error=\u5BC6\u78BC\u683C\u5F0F\uFF1A8-20\u4F4D\u4E14\u81F3\u5C
 i18n_user_pwd_same_error=\u65B0\u820A\u5BC6\u78BC\u4E0D\u80FD\u76F8\u540C
 
 i18n_copilot_ds=\u7576\u524D\u50C5\u652F\u6301MySQL\u6578\u64DA\u6E90
+
+i18n_file_download_failed=\u6587\u4ef6\u4e0b\u8f09\u5931\u6557\uff01
+i18n_unsupported_file_format=\u4e0d\u652f\u63f4\u7684\u6587\u4ef6\u683c\u5f0f\uff01
+i18n_invalid_address=\u7121\u6548\u7684\u5730\u5740\uff01
+i18n_unsupported_protocol=\u4e0d\u652f\u63f4\u7684\u5354\u8b70\uff01
+i18n_excel_error_first_row=\u9996\u884c\u884c\u4e2d\u4e0d\u5141\u8a31\u6709\u7a7a\u5132\u5b58\u683c\uff01
