--- a/core/core-backend/src/main/resources/i18n/core_en_US.properties
+++ b/core/core-backend/src/main/resources/i18n/core_en_US.properties
@@ -209,3 +209,4 @@ i18n_unsupported_file_format=Unsupported file format!
 i18n_invalid_address=Invalid address!
 i18n_unsupported_protocol=Unsupported protocol!
 i18n_excel_error_first_row=Empty cells are not allowed in the middle of the first row!
+i18n_app_error_no_api=Current API data source is not supported.
