--- a/core/core-backend/src/main/resources/i18n/core_zh_TW.properties
+++ b/core/core-backend/src/main/resources/i18n/core_zh_TW.properties
@@ -208,3 +208,4 @@ i18n_unsupported_file_format=\u4e0d\u652f\u63f4\u7684\u6587\u4ef6\u683c\u5f0f\uf
 i18n_invalid_address=\u7121\u6548\u7684\u5730\u5740\uff01
 i18n_unsupported_protocol=\u4e0d\u652f\u63f4\u7684\u5354\u8b70\uff01
 i18n_excel_error_first_row=\u9996\u884c\u884c\u4e2d\u4e0d\u5141\u8a31\u6709\u7a7a\u5132\u5b58\u683c\uff01
+i18n_app_error_no_api=\u7576\u524d\u4e0d\u652f\u63f4API\u6578\u64da\u6e90\u3002
