--- a/core/core-backend/src/main/resources/i18n/core_zh_CN.properties
+++ b/core/core-backend/src/main/resources/i18n/core_zh_CN.properties
@@ -129,6 +129,7 @@ i18n_df_gt_check=\u503C\u9700\u8981\u5927\u4E8E %s: %s
 i18n_df_le_check=\u503C\u9700\u8981\u5C0F\u4E8E\u7B49\u4E8E %s: %s
 i18n_df_ge_check=\u503C\u9700\u8981\u5927\u4E8E\u7B49\u4E8E %s: %s
 i18n_df_column_exists=\u5B57\u6BB5: %s \u5DF2\u5B58\u5728
+i18n_df_table_primary_key_not_exists=\u6B64\u8868\u4E0D\u5B58\u5728\u4E3B\u952E\uFF0C\u4E0D\u652F\u6301\u5173\u8054
 
 i18n_wrong_email=\u90AE\u7BB1\u683C\u5F0F\u9519\u8BEF
 i18n_wrong_tel=\u624B\u673A\u53F7\u7801\u683C\u5F0F\u9519\u8BEF
@@ -203,9 +204,9 @@ i18n_user_pwd_same_error=\u65B0\u65E7\u5BC6\u7801\u4E0D\u80FD\u76F8\u540C
 
 i18n_copilot_ds=\u5F53\u524D\u4EC5\u652F\u6301MySQL\u6570\u636E\u6E90
 
-i18n_file_download_failed=\u4e0b\u8f7d\u6587\u4ef6\u5931\u8d25\uff01
-i18n_unsupported_file_format=\u4e0d\u652f\u6301\u7684\u6587\u4ef6\u683c\u5f0f\uff01
-i18n_invalid_address=\u65e0\u6548\u7684\u5730\u5740\uff01
-i18n_unsupported_protocol=\u4e0d\u652f\u6301\u7684\u534f\u8bae\uff01
-i18n_excel_error_first_row=\u9996\u884c\u884c\u4e2d\u4e0d\u5141\u8bb8\u6709\u7a7a\u5355\u5143\u683c\uff01
-i18n_app_error_no_api=\u5f53\u524d\u4e0d\u652f\u6301API\u6570\u636e\u6e90\u3002
+i18n_file_download_failed=\u4E0B\u8F7D\u6587\u4EF6\u5931\u8D25\uFF01
+i18n_unsupported_file_format=\u4E0D\u652F\u6301\u7684\u6587\u4EF6\u683C\u5F0F\uFF01
+i18n_invalid_address=\u65E0\u6548\u7684\u5730\u5740\uFF01
+i18n_unsupported_protocol=\u4E0D\u652F\u6301\u7684\u534F\u8BAE\uFF01
+i18n_excel_error_first_row=\u9996\u884C\u884C\u4E2D\u4E0D\u5141\u8BB8\u6709\u7A7A\u5355\u5143\u683C\uFF01
+i18n_app_error_no_api=\u5F53\u524D\u4E0D\u652F\u6301API\u6570\u636E\u6E90\u3002
