fix(仪表板、数据大屏): 优化空资源提示#16567 (#16601)

--- a/core/core-backend/src/main/resources/i18n/core_en_US.properties
+++ b/core/core-backend/src/main/resources/i18n/core_en_US.properties
@@ -211,3 +211,4 @@ i18n_invalid_address=Invalid address!
 i18n_unsupported_protocol=Unsupported protocol!
 i18n_excel_error_first_row=Empty cells are not allowed in the middle of the first row!
 i18n_app_error_no_api=Current API data source is not supported.
+i18n_resource_not_exists=Resource does not exist or has been deleted...
